--- a/styles/about.css
+++ b/styles/about.css
@@ -5,14 +5,16 @@ body {
   margin: 0;
 }
 
+/*Footer positioned to the bottom of the webpage*/
 footer{
-  position: fixed;
+  position: absolute;
+  top:950px;
   width: 100%;
   height: 45px;
   background-color: #393939;
   border-top:2px solid;
   overflow:hidden;
-  bottom: 0px;
+  bottom:0px;
 }
 
 
@@ -20,58 +22,79 @@ footer{
 a {
   text-decoration: none;
   color: #FFFFFF;
-  padding: 0px;
   font-weight: bold;
   font-size: 20px;
   color: #FFFFFF;
-  position: relative;
 }
+
+/*------------------Navigation------------------*/
 
 /*Create the navigation bar*/
 ul.navigation {
-  list-style-type: none;
   margin: 0;
-  padding: 0;
   overflow: hidden;
   background-color: #393939;
   border-bottom:2px solid;
 }
 
-/*Arrange the items in the navigation bar (Move to the right and display inline)*/
+/*Hide the list into menu icon*/
 ul.navigation li {
-  padding-left:300px;
-  display:inline-block;
+  display:none;
+  padding-left:0px;
 }
 
 /*Spacing and organising the list*/
 ul.navigation li a {
   display: inline-block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  transition: 0.3s;
+  padding: 14px;
   font-size: 21px;
 }
 
-/*Menu icon is hidden when the page is over the limit specified*/
+/*Position the menu expanding icon to the right*/
 ul.navigation li.icon {
-  display: none;
+  float: right;
+  display: inline-block;
 }
 
+
+/*--Responsive settings--*/
+
+@media screen and (max-width: 600px){
+  ul.navigation.responsive{
+    padding-top:0px;
+    background-color: rgba(255,255,255,0.1);
+  }
+
+  ul.navigation.responsive li.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+
+  ul.navigation.responsive li {
+    float: none;
+    display: inline;
+  }
+
+  ul.navigation.responsive li a {
+    display: block;
+    text-align: center;
+    color:#000000;
+  }
+
+}
 
 
 /*Animation settings for each paragraph*/
 p.animation{
-  font-family: "Times New Roman", Times, serif;
-  font-size: 21px;
   font-weight: bold;
   color:#494646;
-  margin: 20px 0 0 100px;
   position: relative;
-  top:250px;
   overflow: hidden;
   animation: type 3s steps(60, end); 
+  margin: 10px 0 0 10px;
+  font-size: 14px;
+  top:50px;
 }
 
 /*Time after which each line should be displayed*/
@@ -100,28 +123,22 @@ span{
 } 
 
 @keyframes type2{
-  0% {opacity: 0;}
-  100% {opacity: 1;}
-  0%{width: 0;}
-  50%{width: 0;}
-  100%{ width: 100; } 
+ 0% {opacity: 0;}
+ 100% {opacity: 1;}
+ from { width: 0; } 
 
 }
 
 @keyframes type3{
-  0% {opacity: 0;}
-  100% {opacity: 1;}
-  0%{width: 0;}
-  50%{width: 0;}
-  100%{ width: 100; } 
+ 0% {opacity: 0;}
+ 100% {opacity: 1;}
+ from { width: 0; } 
 } 
 
 @keyframes type4{
-  0% {opacity: 0;}
-  100% {opacity: 1;}
-  0%{width: 0;}
-  50%{width: 0;}
-  100%{ width: 100; } 
+ 0% {opacity: 0;}
+ 100% {opacity: 1;}
+ from { width: 0; } 
 } 
 
 
@@ -129,125 +146,32 @@ span{
   to{opacity: .0;}
 }
 
-::selection{
-  background: black;
-}
 
-
-/*---------------------------------------------------------------------MOBILE-VERSION!----------------------------------------------------------------------------------*/
-
-/*Whilst the width is below 600px do the following*/
-@media screen and (max-width:600px) {
-
-  body{
-    overflow:hidden;
-  }
-
-  footer{
-    display:none;
-  }
-
-
-  ul.navigation {
-    min-width:300px;
-    max-width: 600px;
-  }
-
-  /*Hide the links into the menu*/
-  ul.navigation li
-  {
-    display: none;
-    padding-left: 0px;
-  }
-
-  /*Display the menu expanding icon to the right*/
-  ul.navigation li.icon {
-    float: right;
-    display: inline-block;
-  }
-
-  /*--Responsive settings--*/
-
-  /*How the list should be displayed one the expand button is clicked*/
-
-  ul.navigation.responsive{
-    position: relative;
-    padding-top:0px;
-    width: 100%;
-    background-color: rgba(255,255,255,0.1);
-  }
-
-  ul.navigation.responsive li.icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-
-  ul.navigation.responsive li {
-    float: none;
-    display: inline;
-  }
-
-  ul.navigation.responsive li a {
-    display: block;
-    text-align: center;
-    color:#494646;
-  }
-
-  p.animation{
-    margin: 10px 0 0 10px;
-    font-size: 14px;
-    top:50px;
-  }
-
-}
-
-
-
-
-/*---------------------------------------------------------------------IPAD/TABLET VERSION!----------------------------------------------------------------------------------*/
+/*--------------------------------------------------IPAD/TABLET VERSION---------------------------------------------------------------------*/
 
 /*Whilst the width is between 600px and 800px do the following*/
 @media screen and (min-width: 600px) and (max-width: 800px){
 
-  body{
-    overflow:hidden;
+  footer{
+    max-width: 900px;
+    min-width: 900px;
   }
 
   ul.navigation {
-    min-width: 940px;
-    max-width: 940px;
+    max-width: 860px;
+    min-width: 860px;
+    margin: 0;
+    overflow: hidden;
   }
 
   ul.navigation li {
-    padding-left:80px;
+    padding-left:50px;
+    display: inline-block;
   }
 
-  p.animation{
-    top:150px;
-    font-size: 20px;
-    margin: 10px  0 0 10px;
-  }
-
-}
-
-/*---------------------------------------------------------------------LAPTOP VERSION!!!--------------------------------------------------------------------------------------*/
-
-/*Whilst the width is between 800px and 1600px do the following*/
-@media screen and (min-width: 800px) and (max-width: 1600px){
-
-
-  ul.navigation {
-    max-width: 1600px;
-    min-width: 1600px;
-  }
-
-  ul.navigation li {
-    padding-left:200px;
-  }
-
-  ul.navigation li a:hover{
-    background-color: #FF9900;
+  /*Menu icon is hidden when the page is over the limit specified*/
+  ul.navigation li.icon {
+    display: none;
   }
 
   p.animation{
@@ -258,23 +182,78 @@ span{
 
 }
 
+/*--------------------------------------------------LAPTOP VERSION---------------------------------------------------------------------*/
 
-/*---------------------------------------------------------------------GLOBAL/DESKTOP VERSION!-----------------------------------------------------------------------------------*/
+/*Whilst the width is between 800px and 1600px do the following*/
+@media screen and (min-width: 800px) and (max-width: 1600px){
 
-/*Whilst the width is above 1600px do the following*/
-@media screen and (min-width: 1600px) {
+  footer{
+    max-width: 1600px;
+    min-width: 1600px;
+  }
 
-  /*Adding a hover effect*/
+  ul.navigation {
+    max-width: 1560px;
+    min-width: 1560px;
+  }
+
+  ul.navigation li {
+    padding-left:200px;
+    display: inline-block;
+  }
+
+  /*Menu icon is hidden when the page is over the limit specified*/
+  ul.navigation li.icon {
+    display: none;
+  }
+
   ul.navigation li a:hover{
     background-color: #FF9900;
   }
 
-  ul.navigation {
-    min-width: 2500px;
-    max-width: 2500px;
+  p.animation{
+    top:150px;
+    font-size: 20px;
+    margin: 10px  0 0 10px;
   }
 
+}
 
+
+/*--------------------------------------------------DESKTOP VERSION---------------------------------------------------------------------*/
+
+/*Whilst the width is above 1600px do the following*/
+@media screen and (min-width: 1600px) {
+
+  body{
+    overflow-x:hidden;
+  }
+
+  footer{
+    max-width: 2000px;
+    min-width: 2000px;
+  }
+
+  ul.navigation li {
+    padding-left:300px;
+    display:inline-block;
+  }
+
+  ul.navigation {
+    max-width: 2000px;
+    min-width: 2000px;
+  }
+
+  /*Menu icon is hidden when the page is over the limit specified*/
+  ul.navigation li.icon {
+    display: none;
+  }
+
+  p.animation{
+   font-size: 22px;
+   margin: 20px 0 0 100px;
+   top:250px;
+ }
 
 }
 
