--- a/styles/contact.css
+++ b/styles/contact.css
@@ -3,16 +3,19 @@ body {
   color: #FFFFFF;
   background-color: #f9efef;
   margin: 0;
+  overflow-x: hidden;
 }
 
+/*Footer positioned to the bottom of the webpage*/
 footer{
-  position: fixed;
+  position: absolute;
+  top:1000px;
   width: 100%;
   height: 45px;
   background-color: #393939;
   border-top:2px solid;
   overflow:hidden;
-  bottom: 0px;
+  bottom:0px;
 }
 
 .text{
@@ -20,10 +23,13 @@ footer{
 }
 
 h1{
+  font-size: 18px;
   color:#160101;
 }
 
 p{
+  width:27em;
+  font-size: 12px;
   color:#160101;
 }
 
@@ -32,154 +38,44 @@ p{
 a {
   text-decoration: none;
   color: #FFFFFF;
-  padding: 0px;
   font-weight: bold;
   font-size: 20px;
   color: #FFFFFF;
-  position: relative;
 }
+
+/*------------------Navigation------------------*/
 
 /*Create the navigation bar*/
 ul.navigation {
-  list-style-type: none;
   margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
-  border-bottom:1px solid;
-}
-
-/*Create the navigation bar*/
-ul.navigation {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
   overflow: hidden;
   background-color: #393939;
   border-bottom:2px solid;
 }
 
-/*Arrange the items in the navigation bar (Move to the right and display inline)*/
+/*Hide the list into menu icon*/
 ul.navigation li {
-  padding-left:300px;
-  display:inline-block;
+  display:none;
+  padding-left:0px;
 }
 
 /*Spacing and organising the list*/
 ul.navigation li a {
   display: inline-block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  transition: 0.3s;
+  padding: 14px;
   font-size: 21px;
 }
 
-/*Menu icon is hidden when the page is over the limit specified*/
+/*Position the menu expanding icon to the right*/
 ul.navigation li.icon {
-  display: none;
-}
-
-
-#wrapper {
-  width: 700px;
-  padding: 50px 50px 20px 50px;
-  margin: 20px auto;
-}
-
-#contact {
-  width: 600px;
-  margin-top: 25px;
-}
-
-#contact input, #contact textarea {
-  padding: 5px;
-  width: 470px;
-  font-size: 1.4em;
-  margin: 0px 0px 40px 0px;
-  border: 2px solid #ccc;
-}
-
-#contact textarea {
-  height: 100px;
-}
-
-#contact textarea:focus, #contact input:focus {
-  border: 2px solid #900;
-}
-
-#contact input.button {
-  width: 100px;
   float: right;
-}
-
-label {
-  float: left;
-  text-align: right;
-  margin-right: 10px;
-  width: 90px;
-  padding-top: 5px;
-  font-size: 22px;
-  color:#160101;
-}
-
-.message{
-  font-size: 20px;
-  position: absolute;
-  top:300px;
-  left:700px;
-  text-align: center;
-}
-
-.return{
-  position: absolute;
-  top:400px;
-  left:850px;
-  text-align: center;
-  text-decoration: underline;
-  background-color: grey;
   display: inline-block;
 }
 
 
-/*---------------------------------------------------------------------MOBILE-VERSION!----------------------------------------------------------------------------------*/
+/*--Responsive settings--*/
 
-/*Whilst the width is below 600px do the following*/
-@media screen and (max-width:600px) {
-
-
-  p{
-    width:27em;
-    font-size: 12px;
-  }
-
-  h1{
-    font-size: 18px;
-  }
-
-  footer{
-    display:none;
-  }
-
-
-  /*Hide the links into the menu*/
-  ul.navigation li
-  {
-    display: none;
-    padding-left: 0px;
-  }
-
-  /*Display the menu expanding icon to the right*/
-  ul.navigation li.icon {
-    float: right;
-    display: inline-block;
-  }
-
-  /*--Responsive settings--*/
-
-  /*How the list should be displayed one the expand button is clicked*/
-
+@media screen and (max-width: 600px){
   ul.navigation.responsive{
     padding-top:0px;
     background-color: rgba(255,255,255,0.1);
@@ -199,50 +95,67 @@ label {
   ul.navigation.responsive li a {
     display: block;
     text-align: center;
-    color:#494646;
+    color:#000000;
   }
-
-
-  #wrapper {
-    width: 350px;
-    padding: 50px 0px 0px 0px;
-    overflow:hidden;
-  }
-
-
-  #contact input, #contact textarea {
-    width: 240px;
-    font-size: 1em;
-    margin: 0px 250px 30px 30px;
-  }
-
-  #contact input.button {
-    width: 100px;
-    position: relative;
-    top:10px;
-    left:-100px;
-  }
-
-  label {
-    width:35px;
-    font-size: 12px;
-  }
-
-
-  .message{
-    top:200px;
-    left:80px;
-  }
-
-  .return{
-    top:250px;
-    left:20px;
-  }
-
 
 }
 
+/*---Contact Form---*/
 
+#wrapper {
+  width: 350px;
+  padding: 50px 0px 0px 30px;
+  overflow:hidden;
+}
+
+#contact input, #contact textarea {
+  width: 240px;
+  font-size: 1em;
+  margin: 0px 0px 30px 30px;
+}
+
+#contact textarea {
+  height: 100px;
+}
+
+#contact textarea:focus, #contact input:focus {
+  border: 2px solid #900;
+}
+
+#contact input.button {
+  width: 100px;
+  position: relative;
+  top:10px;
+  left:100px;
+}
+
+label {
+  float: left;
+  text-align: right;
+  margin-right: 10px;
+  padding-top: 5px;
+  width:35px;
+  font-size: 12px;
+  color:#160101;
+}
+
+/*Once submit message is pressed*/
+.message{
+  position: absolute;
+  top:200px;
+  left:80px;
+  text-align: center;
+}
+
+.return{
+  position: absolute;
+  top:250px;
+  left:20px;
+  text-align: center;
+  text-decoration: underline;
+  background-color: grey;
+  display: inline-block;
+}
 
 
 /*---------------------------------------------------------------------IPAD/TABLET VERSION!----------------------------------------------------------------------------------*/
@@ -250,50 +163,79 @@ label {
 /*Whilst the width is between 600px and 800px do the following*/
 @media screen and (min-width: 600px) and (max-width: 800px){
 
-  ul.navigation {
-    max-width: 1000px;
-    min-width: 1000px;
+  body{
+    overflow-x: hidden;
   }
 
-  ul.navigation li {
-    padding-left:80px;
+  h1{
+    font-size: 18px;
   }
 
-  #wrapper {
-    padding: 50px 0px 20px 10px;
-  }
-
-  #contact input, #contact textarea {
-    width: 300px;
-    font-size: 1em;
-    margin: 0px 0px 30px 30px;
-  }
-
-  #contact input.button {
-    width: 100px;
-    position: relative;
-    top:0px;
-    left:-230px;
-  }
-
-  label {
-    position:relative;
-    left:-20px;
-    margin-right: 89px;
-    width: 70px;
-    padding-top: 5px;
+  p{
     font-size: 16px;
   }
 
-  .message{
-  top:300px;
-  left:150px;
-}
+  footer{
+    min-width: 1660px;
+  }
 
-.return{
-  top:400px;
-  left:300px;
-}
+
+  ul.navigation {
+    max-width: 900px;
+    min-width: 900px;
+    margin: 0;
+    overflow: hidden;
+  }
+
+  ul.navigation li {
+    padding-left:50px;
+    display: inline-block;
+  }
+
+  /*Menu icon is hidden when the page is over the limit specified*/
+  ul.navigation li.icon {
+    display: none;
+  }
+
+  #wrapper {
+    width: 700px;
+    padding: 50px 50px 20px 50px;
+    margin: 20px auto;
+  }
+
+  #contact {
+    width: 600px;
+    margin-top: 25px;
+  }
+
+  #contact input, #contact textarea {
+    padding: 5px;
+    width: 470px;
+    font-size: 1.4em;
+    margin: 0px 0px 40px 0px;
+    border: 2px solid #ccc;
+  }
+
+  #contact input.button {
+    left:300px;
+  }
+
+  label {
+    margin-right: 10px;
+    width: 90px;
+    font-size: 18px;
+  }
+
+  .message{
+    top:200px;
+    left:250px;
+  }
+
+  .return{
+    top:250px;
+    left:150px;
+  }
+
 
 }
 
@@ -302,57 +244,76 @@ label {
 
 /*Whilst the width is between 800px and 1600px do the following*/
 @media screen and (min-width: 800px) and (max-width: 1600px){
-  
+
+  body{
+    overflow:visible;
+  }
+
+  footer{
+    min-width: 1670px;
+  }
+
   ul.navigation {
-    max-width: 1600px;
-    min-width: 1600px;
+    max-width: 1630px;
+    min-width: 1630px;
   }
 
   ul.navigation li {
     padding-left:200px;
+    display: inline-block;
   }
 
-  ul.navigation li a:hover{
-    background-color: #FF9900;
+  /*Menu icon is hidden when the page is over the limit specified*/
+  ul.navigation li.icon {
+    display: none;
   }
 
-  #wrapper {
-    padding: 0px 0px 20px 10px;
+  h1{
+    font-size: 24px;
   }
 
-  #contact input, #contact textarea {
-    width: 300px;
-    font-size: 1em;
-    margin: 0px 0px 30px 30px;
-  }
-
-  #contact input.button {
-    width: 100px;
-    position: relative;
-    top:0px;
-    left:-230px;
-    margin-bottom: 100px;
-  }
-
-  label {
-    position:relative;
-    left:-20px;
-    margin-right: 89px;
-    width: 70px;
-    padding-top: 5px;
+  p{
     font-size: 16px;
   }
 
-   .message{
-    top:200px;
-    left:450px;
+  #wrapper {
+    width: 700px;
+    padding: 50px 50px 20px 50px;
+    margin: 20px auto;
   }
 
-  .return{
-    top:300px;
+  #contact {
+    width: 600px;
+    margin-top: 25px;
+  }
+
+  #contact input, #contact textarea {
+    padding: 5px;
+    width: 470px;
+    font-size: 1.4em;
+    margin: 0px 0px 40px 0px;
+    border: 2px solid #ccc;
+  }
+
+  #contact input.button {
+    left:300px;
+  }
+
+  label {
+    margin-right: 10px;
+    width: 90px;
+    font-size: 22px;
+  }
+
+  .message{
+    top:200px;
     left:600px;
   }
 
+  .return{
+    top:250px;
+    left:550px;
+  }
 
 }
 
@@ -363,16 +324,73 @@ label {
 /*Whilst the width is above 1600px do the following*/
 @media screen and (min-width: 1600px) {
 
- /*Adding a hover effect*/
- ul.navigation li a:hover{
-  background-color: #FF9900;
+  body{
+    overflow-x: hidden;
+  }
+
+  ul.navigation li {
+    padding-left:300px;
+    display:inline-block;
+  }
+
+  ul.navigation {
+    max-width: 2000px;
+    min-width: 2000px;
+  }
+
+  /*Menu icon is hidden when the page is over the limit specified*/
+  ul.navigation li.icon {
+    display: none;
+  }
+
+  h1{
+    font-size: 24px;
+  }
+
+  p{
+    font-size: 16px;
+  }
+
+  #wrapper {
+    width: 700px;
+    padding: 100px 50px 20px 50px;
+    margin: 20px auto;
+  }
+
+  #contact {
+    width: 600px;
+    margin-top: 25px;
+  }
+
+  #contact input, #contact textarea {
+    padding: 5px;
+    width: 470px;
+    font-size: 1.4em;
+    margin: 0px 0px 40px 0px;
+    border: 2px solid #ccc;
+  }
+
+  #contact input.button {
+    left:300px;
+  }
+
+  label {
+    margin-right: 10px;
+    width: 90px;
+    font-size: 22px;
+  }
+
+  .message{
+    top:300px;
+    left:800px;
+  }
+
+  .return{
+    top:350px;
+    left:750px;
+  }
+
 }
 
-ul.navigation {
-  max-width: 2000px;
-  min-width: 2000px;
-}
-
-}
 
 
