--- a/styles/social.css
+++ b/styles/social.css
@@ -5,12 +5,23 @@ body {
   margin: 0;
 }
 
-header {
-  font-size: 25px;
-  position: absolute;
-  left: 620px;
-  top:950px;
+header{
+  position: relative;
+  font-size: 12px;
+  left:50px;
+  top:0px;
   white-space: nowrap;
+}
+
+/*Photography heading positioned to the center of the slideshow upon first startup*/
+h2
+{
+  color: #fff;
+  text-align: center;
+  z-index: 3;
+  position: relative;
+  font-size: 24px;
+  padding-top:290px;
 }
 
 footer{
@@ -29,159 +40,46 @@ footer{
 a {
   text-decoration: none;
   color: #FFFFFF;
-  padding: 0px;
   font-weight: bold;
+  font-size: 20px;
   color: #FFFFFF;
-  position: relative;
 }
+
+/*------------------Navigation------------------*/
 
 /*Create the navigation bar*/
 ul.navigation {
-  list-style-type: none;
   margin: 0;
-  padding: 0;
   overflow: hidden;
   background-color: #393939;
   border-bottom:2px solid;
 }
 
-/*Arrange the items in the navigation bar (Move to the right and display inline)*/
+/*Hide the list into menu icon*/
 ul.navigation li {
-  padding-left:300px;
-  display:inline-block;
+  display:none;
+  padding-left:0px;
 }
 
 /*Spacing and organising the list*/
 ul.navigation li a {
   display: inline-block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  transition: 0.3s;
+  padding: 14px;
   font-size: 21px;
 }
 
-/*Menu icon is hidden when the page is over the limit specified*/
+/*Position the menu expanding icon to the right*/
 ul.navigation li.icon {
-  display: none;
-}
-
-
-/*Set up the slide show, image covers the whole specified display*/
-#slider
-{
-  height: 800px;
-  background-size: 1350px 802px;
-  background-repeat: no-repeat;
-  background-position: center;
-  -webkit-transition: background 3s;
-}
-
-#slider:after
-{
-  position: absolute;
-  content: '';
-  top: 95px;
-  left: 276px;
-  width: 71%;
-  height: 802px;
-  z-index:1;
-  background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3));
-}
-
-/*Icon for the left and right arrows*/
-.icon
-{
-  font-size: 50px;
-  color: #fff;
-  position: relative;
-  z-index: 3;
-}
-
-#left
-{
-  float: left;
-  margin: 350px 300px;
-}
-
-#right
-{
   float: right;
-  margin: 350px 300px;
-}
-
-/*Photography heading positioned to the center of the slideshow upon first startup*/
-h2
-{
-  color: #fff;
-  text-align: center;
-  z-index: 3;
-  position: relative;
-  font-size: 52px;
-  padding-top:350px;
+  display: inline-block;
 }
 
 
-/*Social websites logo positioning*/
-#fblogo{
-  position: relative;
-  left:780px;
-  top:200px;
-  border:3px solid #021a40;
-}
+/*--Responsive settings--*/
 
-#lilogo{
-  position: relative;
-  left:470px;
-  top:400px;
-  border:3px solid #021a40;
-}
-
-#inlogo{
- position: relative;
- left:160px;
- top:620px;
- border:3px solid #021a40;
-}
-
-
-/*---------------------------------------------------------------------MOBILE-VERSION!----------------------------------------------------------------------------------*/
-
-/*Whilst the width is below 600px do the following*/
-@media screen and (max-width:600px) {
-
-  footer{
-    display:none;
-  }
-
-
-  ul.navigation {
-    min-width:300px;
-    max-width: 600px;
-  }
-
-  /*Hide the links into the menu*/
-  ul.navigation li
-  {
-    display: none;
-    padding-left: 0px;
-  }
-
-  /*Display the menu expanding icon to the right*/
-  ul.navigation li.icon {
-    float: right;
-    display: inline-block;
-  }
-
-  /*--Responsive settings--*/
-
-  /*How the list should be displayed one the expand button is clicked*/
-
- ul.navigation.responsive{
-    position: relative;
+@media screen and (max-width: 600px){
+  ul.navigation.responsive{
     padding-top:0px;
-    width: 100%;
     background-color: rgba(255,255,255,0.1);
   }
 
@@ -199,62 +97,82 @@ h2
   ul.navigation.responsive li a {
     display: block;
     text-align: center;
+    color:#FFFFFF;
   }
-
-  #slider
-  {
-    height: 600px;
-    background-size: 970px 300px;
-  }
-
-  #slider:after
-  {
-    top: 230px;
-    left: 0px;
-    width: 100%;
-    height: 310px;
-  }
-
-  #left
-  {
-    margin: 270px 10px;
-  }
-
-  #right
-  {
-    margin: 270px 10px;
-  }
-
-  h2
-  {
-    font-size: 24px;
-    padding-top:290px;
-  }
-
-  header{
-    font-size: 12px;
-    left:40px;
-    top:580px;
-  }
-
-  #fblogo{
-    left:40px;
-    top:0px;
-  }
-
-  #lilogo{
-    left:40px;
-    top:50px;
-  }
-
-  #inlogo{
-    left:40px;
-    top:100px;
-    margin-bottom: 50px;
-  }
-
 
 }
+
+/*Set up the slide show, image covers the whole specified display*/
+#slider
+{
+  height: 600px;
+  background-size: 970px 300px;
+  background-repeat: no-repeat;
+  background-position: center;
+  -webkit-transition: background 3s;
+}
+
+#slider:after
+{
+  position: absolute;
+  content: '';
+  top: 230px;
+  left: 0px;
+  width: 100%;
+  height: 310px;
+  z-index:1;
+  background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3));
+}
+
+/*Icon for the left and right arrows*/
+.icon
+{
+  font-size: 50px;
+  color: #fff;
+  position: relative;
+  z-index: 3;
+}
+
+#left
+{
+  float: left;
+  margin: 270px 10px;
+}
+
+#right
+{
+  float: right;
+  margin: 270px 10px;
+}
+
+
+
+
+/*Social websites logo positioning*/
+#fblogo{
+  position: relative;
+  left:60px;
+  top:0px;
+  border:3px solid #021a40;
+}
+
+#lilogo{
+  position: relative;
+  left:60px;
+  top:50px;
+  border:3px solid #021a40;
+}
+
+#inlogo{
+ position: relative;
+ left:60px;
+ top:100px;
+ border:3px solid #021a40;
+ margin-bottom:50px;
+}
+
+
+
 
 
 
@@ -264,70 +182,82 @@ h2
 /*Whilst the width is between 600px and 800px do the following*/
 @media screen and (min-width: 600px) and (max-width: 800px){
 
-  ul.navigation {
-    max-width: 1000px;
-    min-width: 1000px;
+  body{
+    overflow-x: hidden;
   }
 
-  ul.navigation li {
-    padding-left:80px;
-  }
+ ul.navigation {
+  max-width: 900px;
+  min-width: 900px;
+  margin: 0;
+  overflow: hidden;
+}
 
-  #slider
-  {
-    height: 500px;
-    background-size: 770px 800px;
-  }
+ul.navigation li {
+  padding-left:50px;
+  display: inline-block;
+}
 
-  #slider:after
-  {
-    top: 84px;
-    left: 45px;
-    width: 89.7%;
-    height: 503px;
-  }
+/*Menu icon is hidden when the page is over the limit specified*/
+ul.navigation li.icon {
+  display: none;
+}
 
-  #left
-  {
-    margin: 210px 50px;
-  }
+#slider
+{
+  height: 500px;
+  background-size: 770px 800px;
+}
 
-  #right
-  {
-    margin: 210px 50px;
-  }
+#slider:after
+{
+  top: 84px;
+  left: 45px;
+  width: 89.7%;
+  height: 503px;
+}
 
-  h2
-  {
-    font-size: 36px;
-    padding-top:210px;
-  }
+#left
+{
+  margin: 210px 50px;
+}
 
-  header{
-    font-size: 18px;
-    left:170px;
-    top:680px;
-  }
+#right
+{
+  margin: 210px 50px;
+}
 
-  #fblogo{
-    left:250px;
-    top:200px;
-  }
+h2
+{
+  font-size: 36px;
+  padding-top:210px;
+}
 
-  #lilogo{
-    left:-60px;
-    top:400px;
-  }
+header{
+  font-size: 18px;
+  left:130px;
+  top:50px;
+}
 
-  #inlogo{
-    left:250px;
-    top:500px;
-  }
+#fblogo{
+  left:200px;
+  top:150px;
+}
 
-  footer{
-    min-width: 1000px;
-    max-width: 1000px;
-  }
+#lilogo{
+  left:-110px;
+  top:350px;
+}
+
+#inlogo{
+  left:200px;
+  top:450px;
+}
+
+footer{
+  min-width: 1000px;
+  max-width: 1000px;
+}
 
 
 }
@@ -337,18 +267,21 @@ h2
 /*Whilst the width is between 800px and 1600px do the following*/
 @media screen and (min-width: 800px) and (max-width: 1600px){
 
-ul.navigation {
-    max-width: 1600px;
-    min-width: 1600px;
-  }
-  
-  ul.navigation li {
-    padding-left:200px;
+  ul.navigation {
+    max-width: 1760px;
+    min-width: 1760px;
   }
 
-  ul.navigation li a:hover{
-    background-color: #FF9900;
+  ul.navigation li {
+    padding-left:200px;
+    display: inline-block;
   }
+
+  /*Menu icon is hidden when the page is over the limit specified*/
+  ul.navigation li.icon {
+    display: none;
+  }
+
 
   #slider
   {
@@ -382,23 +315,23 @@ ul.navigation {
 
   header{
     font-size: 18px;
-    left:400px;
-    top:680px;
+    left:450px;
+    top:80px;
   }
 
   #fblogo{
-    left:450px;
-    top:200px;
+    left:550px;
+    top:100px;
   }
 
   #lilogo{
-    left:150px;
-    top:400px;
+    left:240px;
+    top:300px;
   }
 
   #inlogo{
-    left:-160px;
-    top:600px;
+    left:-70px;
+    top:550px;
   }
 
 
@@ -414,9 +347,9 @@ ul.navigation {
 @media screen and (min-width: 1600px) {
 
 
-  /*Adding a hover effect*/
-  ul.navigation li a:hover{
-    background-color: #FF9900;
+  ul.navigation li {
+    padding-left:300px;
+    display:inline-block;
   }
 
   ul.navigation {
@@ -424,11 +357,78 @@ ul.navigation {
     min-width: 2000px;
   }
 
+  /*Menu icon is hidden when the page is over the limit specified*/
+  ul.navigation li.icon {
+    display: none;
+  }
+
   footer{
     min-width: 2000px;
     max-width: 2000px;
   }
 
+
+header {
+  font-size: 25px;
+  
+  left: 620px;
+  top:950px;
+  
+}
+
+/*Set up the slide show, image covers the whole specified display*/
+#slider
+{
+  height: 800px;
+  background-size: 1350px 802px;
+}
+
+#slider:after
+{
+  top: 95px;
+  left: 276px;
+  width: 71%;
+  height: 802px;
+}
+
+
+#left
+{
+  margin: 350px 300px;
+}
+
+#right
+{
+  margin: 350px 300px;
+}
+
+/*Photography heading positioned to the center of the slideshow upon first startup*/
+h2
+{
+  font-size: 52px;
+  padding-top:350px;
+}
+
+header{
+  top:100px;
+}
+
+
+/*Social websites logo positioning*/
+#fblogo{
+  left:780px;
+  top:200px;
+}
+
+#lilogo{
+  left:470px;
+  top:400px;
+}
+
+#inlogo{
+ left:160px;
+ top:620px;
+}
 
 }
 
